add stable threading example, with calling worker dectructor in worker thread

--- a/qt_threads_demo/CMakeLists.txt
+++ b/qt_threads_demo/CMakeLists.txt
@@ -18,6 +18,8 @@ set( PUBLIC_HEADERS
      with_event_loop/runnableworker.h
      with_event_loop/taskworker.h
      with_event_loop/taskservice.h
+     with_event_loop/stablethread.h
+     with_event_loop/stabletaskservice.h
      simple_threads/simplethread.h
      simple_threads/simplerun.h
 )
@@ -26,6 +28,7 @@ set( PUBLIC_SOURCES
      with_event_loop/runnableworker.cpp
      with_event_loop/taskworker.cpp
      with_event_loop/taskservice.cpp
+     with_event_loop/stabletaskservice.cpp
      simple_threads/simplethread.cpp
      simple_threads/simplerun.cpp
 )
